pingハンドラを登録
