# server/internal/schema/api.gen.go
@@ -330,6 +330,9 @@ type ServerInterface interface {
 	// Download image
 	// (GET /images/{imageId})
 	GetImagesImageId(ctx echo.Context, imageId openapi_types.UUID) error
+	// Ping endpoint
+	// (GET /ping)
+	GetPing(ctx echo.Context) error
 	// Get all reviews (summary for top page)
 	// (GET /reviews)
 	GetReviews(ctx echo.Context, params GetReviewsParams) error
@@ -562,6 +565,15 @@ func (w *ServerInterfaceWrapper) GetImagesImageId(ctx echo.Context) error {
 	return err
 }
 
+// GetPing converts echo context to params.
+func (w *ServerInterfaceWrapper) GetPing(ctx echo.Context) error {
+	var err error
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetPing(ctx)
+	return err
+}
+
 // GetReviews converts echo context to params.
 func (w *ServerInterfaceWrapper) GetReviews(ctx echo.Context) error {
 	var err error
@@ -718,6 +730,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.POST(baseURL+"/eateries/:eateryId/reviews", wrapper.PostEateriesEateryIdReviews)
 	router.POST(baseURL+"/images", wrapper.PostImages)
 	router.GET(baseURL+"/images/:imageId", wrapper.GetImagesImageId)
+	router.GET(baseURL+"/ping", wrapper.GetPing)
 	router.GET(baseURL+"/reviews", wrapper.GetReviews)
 	router.DELETE(baseURL+"/reviews/:reviewId", wrapper.DeleteReviewsReviewId)
 	router.GET(baseURL+"/reviews/:reviewId", wrapper.GetReviewsReviewId)
